<resources>
    <string name="app_name">Timer App</string>
    <string name="back_icon">Back Icon</string>
    <string name="timer">Timer</string>
    <string name="more_icon">More Icon</string>
    <string name="start">start</string>
    <string name="reset_icon">Reset Icon</string>
    <string name="speaker_icon">Speaker Icon</string>
    <string name="stop">STOP</string>
    <string name="hr_to_launch">1 hour to launch...</string>
    <string name="start_countdown_helper">Click to start countdown</string>
    <string name="pause">Pause</string>
    <string name="continue_timer">Continue</string>
</resources>